<resources>
    <string name="app_name">IRLRPG</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_password">Recover password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="mental_illness">Mental illness or disorder</string>
    <string name="prompt_email">Email</string>
    <string name="goToQuests">Go to Quests</string>
    <string name="goToTraining">Go to Training</string>
    <string name="importance_level">Importance Level</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="description">Description</string>
    <string name="autism">Autism</string>
    <string name="adhd">Attention Deficit Hyperactivity Disorder</string>
    <string name="levels_difficulty">Levels</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="adviseMessageUser">Use your email</string>
    <string name="change">Change</string>
    <string name="ret">Return</string>
    <string name="logout">Log Out</string>
    <string name="strength">Strength</string>
    <string name="inteligence">Inteligence</string>
</resources>