<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/levelsArrayTrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTrain" />

    <Spinner
        android:id="@+id/levelsArrayTrain"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="286dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/difficulty_level"
        app:layout_constraintBottom_toTopOf="@+id/descTrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descTrain"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:hint="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelsArrayTrain" />

    <Button
        android:id="@+id/addTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/backTrain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:text="@string/ret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addTrain"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dificultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="20dp"
        android:text="@string/difficulty_level"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descTrain"
        app:layout_constraintEnd_toStartOf="@+id/levelsArrayTrain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
</androidx.constraintlayout.widget.ConstraintLayout>